# self-github-update

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  update.rs
src/backends/: github.rs
