[package]
name = "self-github-update-enhanced"
version = "0.39.1"
authors = ["czyt <go-x@qq.com>"]
description = "Self updates for standalone executables (Github) with fast git proxy support"
repository = "https://github.com/lib-x/self-github-update-enhanced"
license = "MIT"
edition = "2021"

[dependencies]
serde_json = { version = "1" }
tempfile = { version = "3" }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
semver = { version = "1" }
zip = { version = "0.6", default-features = false, features = ["time"], optional = true }
either = { version = "1", optional = true }
reqwest-impersonate = { version = "0.11", default-features = false, features = ["impersonate", "blocking", "json"], optional = true}
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }

indicatif = { version = "0.17" }
quick-xml = { version = "0.3" }
regex = { version = "1" }
log = { version = "0.4" }
urlencoding = { version = "2" }
self-replace = { version = "1" }
zipsign-api = { version = "0.1", default-features = false, optional = true }

[features]
default = ["client"]
client = ["reqwest"]
client-impersonate = ["reqwest-impersonate"]
archive-zip = ["zip", "zipsign-api?/verify-zip"]
compression-zip-bzip2 = ["archive-zip", "zip/bzip2"]
compression-zip-deflate = ["archive-zip", "zip/deflate"]
archive-tar = ["tar", "zipsign-api?/verify-tar"]
compression-flate2 = ["archive-tar", "flate2", "either"]
signatures = ["dep:zipsign-api"]

